--- a/test.html
+++ b/test.html
@@ -5,90 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        table {
-            width: 500px;
-            margin: 100px auto;
-            border-collapse: collapse;
-            text-align: center;
-        }
-
-        td,
-        th {
-            border: 1px solid #333;
-        }
-
-        thead tr {
-            height: 40px;
-            background-color: #ccc;
-        }
-    </style>
 </head>
 
 <body>
-    <table cellspacing="0">
-        <thead>
-            <tr>
-                <th>姓名</th>
-                <th>科目</th>
-                <th>成绩</th>
-                <th>操作</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>嘻嘻嘻</td>
-                <td>js</td>
-                <td>100</td>
-                <td><a href="javaScript:;">删除</a></td>
-            </tr>
-        </tbody>
-
-    </table>
+    <button>监听</button>
     <script>
-        //1.准备假数据
-        var datas = [
-            {
-                name: 'xxx',
-                subject: 'js',
-                score: 100
-            },
-            {
-                name: '111',
-                subject: 'js',
-                score: 98
-            },
-            {
-                name: '222',
-                subject: 'js',
-                score: 90
-            }
-        ]
+        var btn = document.querySelector('button');
+        //事件侦听注册事件 
+        //1.attachEvent ie9以前的版本才支持,其他浏览器及ie9以上的都不支持 
+        btn.attachEvent('onclick', function () {
+            alert('222')
+        })
+        btn.addEventListener('onclick', function () {
+            alert('333')
+        })
 
-        //往tbody里面放行
-        var tbody = document.querySelector('tbody');
-        for (var i = 0; i < datas.length; i++) {
-            //1.创建tr
-            var tr = document.createElement('tr');
-            tbody.appendChild(tr);
-            //2.行里面创建td,取决于每个对象里面有几个属性
-            for (var k in datas[i]) {
-                var td = document.createElement('td');
-                td.innerHTML = datas[i][k];
-                tr.appendChild(td)
-            }
-            //3.创建操作单元格
-            var td = document.createElement('td');
-            td.innerHTML = '<a href="javascript:;">删除</a>';
-            tr.appendChild(td);
-        }
-        //4.删除操作 开始
-        var as = document.querySelectorAll('a');
-        for (var i = 0; i < as.length; i++) {
-            as[i].onclick = function () {
-                //node.removeChild(child)
-                //this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode)
-                tbody.removeChild(this.parentNode.parentNode)
+        function addEventListener(element, eventName, fn) {
+            //判断当前浏览器是否支持 addEventListener 方法
+            if (element.addEventListener) {
+                element.addEventListener(eventName, fn);//第三个参数,默认是false
+            } else if (element.attachEvent) {
+                element.attachEvent('on' + eventName, fn);
+            } else {
+                //相当于 element.onclick = fn;
+                element['on' + eventName] = fn;
             }
         }
     </script>
