--- a/test.html
+++ b/test.html
@@ -5,29 +5,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .w {
+            width: 1200px;
+            margin: 10px auto;
+        }
+
+        .slider-bar {
+            position: absolute;
+            left: 50%;
+            top: 300px;
+            margin-left: 600px;
+            width: 45px;
+            height: 130px;
+            background-color: pink;
+
+        }
+
+        .header {
+            height: 150px;
+            background-color: violet;
+        }
+
+        .banner {
+            height: 250px;
+            background-color: teal;
+        }
+
+        .main {
+            height: 1000px;
+            background-color: yellowgreen;
+        }
+
+        span {
+            position: absolute;
+            bottom: 0;
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
-    手机号码: <input type="number"> <button>发送</button>
+    <div class="slider-bar">
+        <span class="goBack">返回顶部</span>
+    </div>
+    <div class="header w">头部区域</div>
+    <div class="banner w">banner区域</div>
+    <div class="main w">主体部分</div>
     <script>
-        var btn = document.querySelector('button');
-        var time = 10;
-        btn.addEventListener('click', function () {
-            btn.disabled = true;
-            var timer = setInterval(function () {
-                if (time == 0) {
-                    clearInterval(timer);
-                    btn.disabled = false;
-                    btn.innerHTML = '发送';
-                    time = 10;
-                } else {
-                    btn.innerHTML = '还剩下' + time + '秒';
-                    time--;
-                }
+        var sliderbar = document.querySelector('.slider-bar');
+        var banner = document.querySelector('.banner');
+        var bannerTop = banner.offsetTop;//就是被卷去头部的大小
 
-            }, 1000)
+        var sliderbarTop = sliderbar.offsetTop - bannerTop;//侧边栏固定定位之后应该变化的值
 
+        var main = document.querySelector('.main');
+        var goBack = document.querySelector('.goBack');
+        var mainTop = main.offsetTop;
+
+        document.addEventListener('scroll', function () {
+            //window.pageYOffset页面被卷去的头部
+            console.log(window.pageYOffset);
+            //当我们页面被卷去的头部大于等于了 bannerTop 此时 侧边栏就要改为固定定位
+            if (window.pageYOffset >= bannerTop) {
+                sliderbar.style.position = 'fixed';
+                sliderbar.style.top = sliderbarTop + 'px';
+            } else {
+                sliderbar.style.position = 'absolute';
+                sliderbar.style.top = 300 + 'px';
+            }
+
+            //
+            if (window.pageYOffset >= mainTop) {
+                goBack.style.display = 'block';
+            } else {
+                goBack.style.display = 'none';
+            }
         })
+
     </script>
 </body>
 
