--- a/test.html
+++ b/test.html
@@ -6,83 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .w {
-            width: 1200px;
-            margin: 10px auto;
-        }
-
-        .slider-bar {
+        div {
             position: absolute;
-            left: 50%;
-            top: 300px;
-            margin-left: 600px;
-            width: 45px;
-            height: 130px;
+            left: 0;
+            width: 100px;
+            height: 100px;
             background-color: pink;
-
-        }
-
-        .header {
-            height: 150px;
-            background-color: violet;
-        }
-
-        .banner {
-            height: 250px;
-            background-color: teal;
-        }
-
-        .main {
-            height: 1000px;
-            background-color: yellowgreen;
         }
 
         span {
             position: absolute;
-            bottom: 0;
-            display: none;
+            display: block;
+            width: 150px;
+            height: 150px;
+            background-color: purple;
         }
     </style>
 </head>
 
 <body>
-    <div class="slider-bar">
-        <span class="goBack">返回顶部</span>
-    </div>
-    <div class="header w">头部区域</div>
-    <div class="banner w">banner区域</div>
-    <div class="main w">主体部分</div>
+    <button class="btn500">按钮到500</button>
+    <button class="btn800">按钮到800</button>
+    <div></div>
+    <span></span>
     <script>
-        var sliderbar = document.querySelector('.slider-bar');
-        var banner = document.querySelector('.banner');
-        var bannerTop = banner.offsetTop;//就是被卷去头部的大小
+        function animate(obj, target, callback) {
+            //callback = function(){}
+            clearInterval(obj.timer);
+            obj.timer = setInterval(() => {
+                //步长值写到定时器的里面 (目标值 - 现在的位置)/10
 
-        var sliderbarTop = sliderbar.offsetTop - bannerTop;//侧边栏固定定位之后应该变化的值
+                var step = (target - obj.offsetLeft) / 10;
+                step = step > 0 ? Math.ceil(step) : Math.floor(step)
 
-        var main = document.querySelector('.main');
-        var goBack = document.querySelector('.goBack');
-        var mainTop = main.offsetTop;
+                if (obj.offsetLeft == target) {
+                    clearInterval(obj.timer);
+                    //回调函数写到定时器结束里面
+                    if (callback) {
+                        callback();
+                    }
+                }
+                //每次
+                obj.style.left = obj.offsetLeft + step + 'px';
+            }, 30);
+        }
 
-        document.addEventListener('scroll', function () {
-            //window.pageYOffset页面被卷去的头部
-            console.log(window.pageYOffset);
-            //当我们页面被卷去的头部大于等于了 bannerTop 此时 侧边栏就要改为固定定位
-            if (window.pageYOffset >= bannerTop) {
-                sliderbar.style.position = 'fixed';
-                sliderbar.style.top = sliderbarTop + 'px';
-            } else {
-                sliderbar.style.position = 'absolute';
-                sliderbar.style.top = 300 + 'px';
-            }
-
-            //
-            if (window.pageYOffset >= mainTop) {
-                goBack.style.display = 'block';
-            } else {
-                goBack.style.display = 'none';
-            }
+        var div = document.querySelector('div');
+        var span = document.querySelector('span');
+        var btn500 = document.querySelector('.btn500');
+        var btn800 = document.querySelector('.btn800');
+        btn500.addEventListener('click', function () {
+            animate(span, 500);
         })
-
+        btn800.addEventListener('click', function () {
+            animate(span, 800, function () {
+                span.style.backgroundColor = 'red';
+            });
+        })
     </script>
 </body>
 
