--- a/test.html
+++ b/test.html
@@ -5,116 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
-
-        .box {
-            position: relative;
-            width: 700px;
-            height: 400px;
-            border: 1px solid #ccc;
-            margin: 0px auto;
-            overflow: hidden;
-        }
-
-        .box ul {
-            width: 500%;
-            height: 400px;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-
-        .box ul li {
-            width: 700px;
-            height: 400px;
-            text-align: center;
-            float: left;
-            list-style: none;
-        }
-
-        .box ul li img {
-            width: 100%;
-            height: 100%;
-        }
-
-        .circle {
+        div {
             width: 100px;
-            position: absolute;
-            bottom: 3%;
-            left: 300px;
-        }
-
-        .circle li {
-            list-style: none;
-            float: left;
-            width: 15px;
-            height: 15px;
-            border: 1px solid #aaa;
-            border-radius: 50%;
-            margin-left: 5px;
-
-        }
-
-        .arrow-l,
-        .arrow-r {
-            display: none;
-            position: absolute;
-            top: 50%;
-            width: 24px;
-            height: 40px;
+            height: 100px;
             background-color: pink;
-            z-index: 999;
-            line-height: 40px;
-            text-decoration: none;
-            text-align: center;
-        }
-
-        .arrow-r {
-            right: 0;
-        }
-
-        .current {
-            background-color: yellow;
         }
     </style>
-
-    <!-- 因为test.js依赖animate.js,所以animate.js要写到index.js上面 -->
-    <script src="./animate.js"></script>
-    <script src="./test.js"></script>
 </head>
 
 <body>
-    <div class="box">
-        <!-- 左侧按钮 -->
-        <a href="javascript:;" class="arrow-l">&lt;</a>
-        <!-- 右侧按钮 -->
-        <a href="javascript:;" class="arrow-r">&gt;</a>
-        <!-- 核心的滚动区域 -->
-        <ul>
-            <li>
-                <img src="./images/1.jpg"></img>
-            </li>
-            <li>
-                <img src="./images/2.jpg"></img>
-            </li>
-            <li>
-                <img src="./images/3.jpg"></img>
-            </li>
-            <li>
-                <img src="./images/4.jpg"></img>
-            </li>
+    <div></div>
+    <script>
+        var div = document.querySelector('div');
+        div.addEventListener('touchstart', function () {
+            console.log('手指触碰到DOM元素')
+        })
 
-        </ul>
-        <!-- 小圆圈 -->
-        <ol class="circle">
+        div.addEventListener('touchmove', function () {
+            console.log('移动')
+        })
 
-        </ol>
-    </div>
+        div.addEventListener('touchend', function () {
+            console.log('离开')
+        })
+    </script>
 </body>
 
 </html>
