--- a/test/test1.html
+++ b/test/test1.html
@@ -5,17 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./js/jquery.min.js"></script>
+
+    <style>
+        div {
+            height: 200px;
+            width: 200px;
+            background: pink;
+        }
+    </style>
 </head>
 
 <body>
-    <a href="test.html">点我去首页</a>
-    <button>后退</button>
+    <div>111</div>
     <script>
-        var btn = document.querySelector('button');
-        btn.addEventListener('click', function () {
-            //history.back();
-            history.go(-1)
-        })
+        //1.DOM对象:用原生js获取过来的对象就是DOM对象
+        var myDiv = document.querySelector('div');
+        console.dir('myDiv', myDiv);
+        console.log('myDiv', myDiv);
+
+        //2.jQuery对象:用jQuery方式获取过来的对象就是jQuery对象
+        $('div');
+        console.dir($('div'))
+
+        //3.jQuery对象只能使用jQuery方法,DOM对象则使用原生JavaScript属性和方法
+        //myDiv.style.display = 'none';
+        //myDiv.hide();  //myDiv是原生对象，不能使用jQuery对象属性和方法
+        //$('div').style.display = 'none';//$('div')是jQuery对象,不能使用原生的属性和方法
     </script>
 </body>
 
