--- a/test/test1.html
+++ b/test/test1.html
@@ -5,113 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <style>
         * {
             padding: 0;
             margin: 0;
         }
-
-        li {
-            list-style: none;
-        }
-
-        .nav {
-            margin: 100px 100px;
-            width: 300px;
-        }
-
-        .nav>li {
-            position: relative;
-            float: left;
-            width: 50px;
-            text-align: center;
-
-        }
-
-        .nav>li>a {
-            display: inline-block;
-            width: 100%;
-            height: 100%;
-            line-height: 41px;
-            color: #333;
-            text-decoration: none;
-        }
-
-        .nav>li>a:hover {
-            background-color: #eee;
-        }
-
-        .nav ul {
-            display: none;
-            position: absolute;
-            width: 100%;
-            border-left: 1px solid #FECC5B;
-            border-right: 1px solid #FECC5B;
-        }
-
-        .nav ul li {
-            border-bottom: 1px solid #FECC5B;
-        }
-
-        .nav ul li:hover {
-            background-color: #ccc;
-        }
     </style>
+
 </head>
 
 <body>
-    <ul class="nav">
-        <li>
-            <a href="javascript:;">微博</a>
-            <ul>
-                <li><a href="javascript:;">私信</a></li>
-                <li><a href="javascript:;">评论</a></li>
-                <li><a href="javascript:;">@我</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="javascript:;">微博</a>
-            <ul>
-                <li><a href="javascript:;">私信</a></li>
-                <li><a href="javascript:;">评论</a></li>
-                <li><a href="javascript:;">@我</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="javascript:;">微博</a>
-            <ul>
-                <li><a href="javascript:;">私信</a></li>
-                <li><a href="javascript:;">评论</a></li>
-                <li><a href="javascript:;">@我</a></li>
-            </ul>
-        </li>
-    </ul>
+    <span>123</span>
+    <div data-index="11"></div>
     <script>
         $(function () {
-            //鼠标经过
-            // $(".nav>li").mouseover(function () {
-            //     //$(this) 是jQuery 当前元素，this不要加引号
-            //     $(this).children("ul").slideDown(200);
-            // });
-
-            //鼠标离开
-            // $(".nav>li").mouseout(function () {
-            //     //$(this) 是jQuery 当前元素，this不要加引号
-            //     $(this).children("ul").slideUp(200);
-            // });
-
-            //1.事件切换 hover 就是鼠标经过和离开的复合写法
-            // $(".nav>li").hover(function () {
-            //     $(this).children("ul").slideDown(200);
-            // }, function () {
-            //     $(this).children("ul").slideUp(200);
-            // })
-
-            //2.事件切换 hover 如果只写一个函数,那么鼠标经过和离开都会触发这个函数
-            $(".nav>li").hover(function () {
-                $(this).children("ul").slideToggle();
-            })
+            $("span").data("username", "andy");
+            console.log($("span").data("username"));//andy
+            console.log($("div").data("index"));//11
         })
     </script>
 </body>
