--- a/test/test1.html
+++ b/test/test1.html
@@ -48,7 +48,7 @@
         .cart-item-list .cart-item {
             width: 100%;
             height: 100px;
-            background-color: greenyellow;
+            /* background-color: greenyellow; */
             padding-top: 10px;
             border-bottom: 1px solid #ccc;
         }
@@ -114,6 +114,11 @@
             width: 30%;
             background-color: red;
         }
+
+        /* 背景颜色 */
+        .check-cart-item {
+            background-color: pink;
+        }
     </style>
 
 </head>
@@ -133,7 +138,7 @@
         </div>
         <!-- 商品详细模块 -->
         <div class="cart-item-list">
-            <div class="cart-item check-cart-item">
+            <div class="cart-item">
                 <div class="p-checkbox">
                     <input type="checkbox" name="" id="" class="j-checkbox">
                 </div>
@@ -154,7 +159,7 @@
                 <div class="p-sum">￥12.20</div>
                 <div class="p-action"><a href="javascript:;">删除</a></div>
             </div>
-            <div class="cart-item check-cart-item">
+            <div class="cart-item">
                 <div class="p-checkbox">
                     <input type="checkbox" name="" id="" class="j-checkbox">
                 </div>
@@ -175,7 +180,7 @@
                 <div class="p-sum">￥12.22</div>
                 <div class="p-action"><a href="javascript:;">删除</a></div>
             </div>
-            <div class="cart-item check-cart-item">
+            <div class="cart-item">
                 <div class="p-checkbox">
                     <input type="checkbox" name="" id="" class="j-checkbox">
                 </div>
@@ -205,11 +210,11 @@
             </div>
             <div class="operation">
                 <a href="javascript:;" class="remove-batch">删除选中的商品</a>
-                <a href="javascript:;" class="clear-all">清理购物车</a>
+                <a href="javascript:;" class="clear-all">清空购物车</a>
             </div>
             <div class="toolbar-right">
-                <div class="amount-sum">已经选<em>1</em>件商品</div>
-                <div class="price-sum">总价:<em>￥100</em></div>
+                <div class="amount-sum">已经选<em>0</em>件商品</div>
+                <div class="price-sum">总价:<em>￥0</em></div>
                 <div class="btn-area">去结算</div>
             </div>
         </div>
@@ -220,7 +225,14 @@
             //1.全选 全不选功能模块
             //就是把全选按钮(checkall)的状态赋值给 三个小的input(j-checkbox)
             $(".checkall").change(function () {
-                $(".j-checkbox,.checkall").prop("checked", $(this).prop("checked"))
+                $(".j-checkbox,.checkall").prop("checked", $(this).prop("checked"));
+                //8.添加背景色
+                console.log('$(this).prop("checked")', $(this).prop("checked"))
+                if ($(this).prop("checked")) {
+                    $(".cart-item").addClass("check-cart-item");
+                } else {
+                    $(".cart-item").removeClass("check-cart-item");
+                }
             })
 
             //2.反全选
@@ -231,6 +243,13 @@
                     $(".checkall").prop("checked", true);
                 } else {
                     $(".checkall").prop("checked", false);
+                }
+
+                //8.添加背景色
+                if ($(this).prop("checked")) {
+                    $(this).parents(".cart-item").addClass("check-cart-item");
+                } else {
+                    $(this).parents(".cart-item").removeClass("check-cart-item");
                 }
             })
 
@@ -291,6 +310,26 @@
                 })
                 $(".price-sum em").text("￥" + money.toFixed(2));
             }
+
+            //7.删除商品模块
+            //(1) 商品后面的删除按钮
+            $(".p-action a").click(function () {
+                $(this).parents(".cart-item").remove();
+                getSum();
+            })
+            //(2) 删除选中的商品
+            $(".remove-batch").click(function () {
+                // $(".j-checkbox").each(function (i, domEle) {
+                //     console.log('domEle', $(domEle).prop("checked"))
+                // })
+                $(".j-checkbox:checked").parents(".cart-item").remove();
+                getSum();
+            })
+            //(3) 清空购物车 删除全部商品
+            $(".clear-all").click(function () {
+                $(".cart-item").remove();
+                getSum();
+            })
         })
     </script>
 </body>
